# Courses

./: .gitignore  README.md
Data Analysis [Yandex Specialization]/1.Math and Python for Data Analysis/: Self-Check.txt
Data Analysis [Yandex Specialization]/2.Supervised Learning/: Self-Check.txt
Data Analysis [Yandex Specialization]/3.Unsupervised Learning/: Self-Check.txt
Data Analysis [Yandex Specialization]/4.Statistics for Data Analysis/: Self-Check.txt
Data Engineering ZoomCamp/module_0_intro/1_1_git_access/: git_access_notes.ipynb
Data Engineering ZoomCamp/module_0_intro/1_2_python_and_pip/: python_and_pip_notes.ipynb
Data Engineering ZoomCamp/module_0_intro/1_3_dependency_management/: dependencies_management_notes.ipynb
Data Engineering ZoomCamp/module_0_intro/1_3_dependency_management/my_project_new/: pyproject.toml  pyproject.toml.save
Data Engineering ZoomCamp/module_0_intro/1_3_dependency_management/my_project_new/tmp/: main.py
Data Engineering ZoomCamp/module_1_contarization_and_infrastructure_as_code/1_0_docker_intro/: Dockerfile  docker_intro_notes.ipynb  simple_pipeline.py
Data Engineering ZoomCamp/module_1_contarization_and_infrastructure_as_code/1_2_data_ingesting_postgres/: Dockerfile  data_ingesting_postgres_notes.ipynb  docker-compose.yaml  (+3 more)
Data Engineering ZoomCamp/module_4_analytics_engineering/: lesson_notes.ipynb
RecSys/RecSys_Course_AT_PoliMi/: 1.Sparse Matrices.ipynb  2. Non Personalized Recommendations.ipynb  3. Content Based Recommendations.ipynb
Uplift/Uplift_Intro_ODS/: 1.Intro.ipynb  3.Sklift Practice.ipynb
(+8 files in other folders)
