[tool.poetry]
name = "my-project-new"
version = "0.1.0"
description = ""
authors = ["vladislav <vladrask.ds@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
command_a = "tmp.main:run"